This file documents the revision history for the Monitoring Webinterface Thruk.

0.72.1  Thu Oct 28 00:07:40 CEST 2010
          - fixed Vautour theme css

0.72    Mon Oct 25 21:35:30 CEST 2010
          - added ssi_path config option
          - added flexible url prefix
          - added filter for latency and execution time
          - added utf8 support for navigation
          - added prefixes for search terms ho: hg: se: and sg:
          - added link to childs on host details page
          - added warning when trying to start a precompiled version on wrong arch
          - added commit page when deleting all downtimes
          - added select all hosts link to service details
          - added use_timezone configuration option
          - fixed removing comments with unprivileged user
          - fixed sending multiple persistent acknowledgements
          - fixed action urls in host details
          - fixed stats querys
          - fixed statusmap for hosts with nasty chars
          - fixed date_format when using timezones
          - fixed ordering logfiles
          - fixed "livestatus: Sorry, Operator 4 for lists not implemented" error with blank searches

0.70.1  Wed Sep  8 14:07:18 CEST 2010
          - fixed problem when deselected all backends
          - fixed problem with filter on Trends page

0.70    Wed Aug 25 08:49:45 CEST 2010
          - search does include comments and downtimes now
          - added new backend abstraction layer to support new backends
          - added noheader parameter for status pages

0.68    Fri Jul 23 21:29:02 CEST 2010
          - added mobile version for iPhones, iPad and Android mobile phones
          - side menu is completly adjustable by config file
          - used date_format_today more often
          - added more columns to excel export
          - added backend param to all pages
          - added check for livestatus minimum version
          - fixed problem with quotes in host definitions on statusmap