@@ -2,6 +2,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 0.72.1  Thu Oct 28 00:07:40 CEST 2010
           - fixed Vautour theme css
+          - fixed host status totals for groups summary pages
 
 0.72    Mon Oct 25 21:35:30 CEST 2010
           - added ssi_path config option
